[project]
name = "agentcourt"
version = "1.3.0"
description = "Policy-driven dispute resolution API for AI agent commerce"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Vivek Kotecha", email = "noreply@agentcourt-api.production" }
]
keywords = [
    "dispute-resolution",
    "ai-agents",
    "agent-commerce",
    "x402",
    "payments",
    "fastapi",
    "policy-engine"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
x402 = ["x402[fastapi,evm]"]
dev = ["pytest>=7.0", "httpx>=0.24", "ruff"]
all = ["x402[fastapi,evm]", "pytest>=7.0", "httpx>=0.24", "ruff"]

[project.urls]
Homepage = "https://vbkotecha.github.io/agentcourt-api/"
Documentation = "https://agentcourt-api-production.up.railway.app/docs"
Repository = "https://github.com/vbkotecha/agentcourt-api"
"Bug Tracker" = "https://github.com/vbkotecha/agentcourt-api/issues"
"Live API" = "https://agentcourt-api-production.up.railway.app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"
